--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -5,6 +5,9 @@ on:
     - cron: 0 18 * * *
   workflow_dispatch:
 
+env:
+  PROJECT_NAME: vtuber
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -52,7 +55,7 @@ jobs:
         run: python3 upload.py
 
       - name: Remove json pages
-        run: rm vtuber/pages/*.json
+        run: rm ${{ env.PROJECT_NAME }}/pages/*.json
 
       - name: Split pages
         run: >
@@ -65,7 +68,7 @@ jobs:
       - name: Diff
         id: diff
         run: |
-          git add -N vtuber/stats vtuber/pages
+          git add -N ${{ env.PROJECT_NAME }}/stats ${{ env.PROJECT_NAME }}/pages
           git diff --name-only --exit-code
         continue-on-error: true
 
@@ -74,7 +77,7 @@ jobs:
           set -x
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git add vtuber/stats vtuber/pages
+          git add ${{ env.PROJECT_NAME }}/stats ${{ env.PROJECT_NAME }}/pages
           git commit -m "Update"
           git push
         if: steps.diff.outcome == 'failure'
