--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -76,7 +76,7 @@ jobs:
         run: |
           set -x
           git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git config user.email github-actions[bot]@users.noreply.github.com
           git add ${{ env.PROJECT_NAME }}/stats ${{ env.PROJECT_NAME }}/pages
           git commit -m "Update"
           git push
