--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -18,11 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10.4'
-          cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: '3.10.4'
+#          cache: 'pip' # caching pip dependencies
+#      - run: pip install -r requirements.txt
 
 #      - id: 'auth'
 #        name: 'Authenticate to Google Cloud'
