--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -72,12 +72,10 @@ jobs:
         run: |
           git add -N ${{ env.PROJECT_NAME }}/stats ${{ env.PROJECT_NAME }}/pages
           git diff --name-only --exit-code
-
-      - name: Exit if no diff
-        if: steps.diff.outcome == 'success'
-        run: exit 0
+        continue-on-error: true
 
       - name: Commit files
+        if: steps.diff.outcome == 'failure'
         run: |
           set -x
           git config user.name github-actions[bot]
@@ -85,14 +83,15 @@ jobs:
           git add ${{ env.PROJECT_NAME }}/stats ${{ env.PROJECT_NAME }}/pages
           git commit -m "Update"
           git push
-        if: steps.diff.outcome == 'failure'
 
       - name: Set Date
+        if: steps.diff.outcome == 'failure'
         env:
           TZ: "Asia/Tokyo"
         run: echo "CURRENT_DATETIME=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: Release
+        if: steps.diff.outcome == 'failure'
         uses: ncipollo/release-action@v1
         with:
           artifacts: "data.zip"
